--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -27,11 +27,10 @@ security:
                 success_handler:   lexik_jwt_authentication.handler.authentication_success
                 failure_handler:   lexik_jwt_authentication.handler.authentication_failure
 
-        depot:
-            pattern:  ^/depot
-            stateless: true
-            anonymous: true
-
+        # depot:
+        #     pattern:  ^/depot
+        #     stateless: true
+        #     anonymous: true
         api:
             pattern:  ^/api
             stateless: true
@@ -44,5 +43,5 @@ security:
     access_control:
         - { path: ^/login, roles:  IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
-        - { path: ^/depot, roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/docs, roles: IS_AUTHENTICATED_ANONYMOUSLY  }
+        # - { path: ^/depot, roles: IS_AUTHENTICATED_FULLY }
