--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=594cf5851e51d0c08b40555b5d78e2e4
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:root@127.0.0.1:3306/test4_sf?serverVersion=5.7
+DATABASE_URL=mysql://root:root@127.0.0.1:3306/transfet_dargent?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
