--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -26,6 +26,7 @@ security:
                 check_path:        /login_check
                 success_handler:   lexik_jwt_authentication.handler.authentication_success
                 failure_handler:   lexik_jwt_authentication.handler.authentication_failure
+            user_checker: App\Security\UserChecker
 
         # depot:
         #     pattern:  ^/depot
